# CS236_Project

./: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Test1.txt  Tuple.cpp  Tuple.h  lab1  lab2  lab3  lab4  main.cpp
